# FluxED

./: #Test.glade#  .clang-format  .fluxproj_cache  .gitignore  .gitmodules  Architecture.txt  CMakeLists.txt  Cube.farc  FluxED.glade  FluxED.glade~  TODO.md  Test.glade  Test.glade~  test.farc
Components/: Light.glade~  Transform.glade  Transform.glade~
Include/FluxED/: 3DView.hh  FluxEd.hh
Include/FluxProj/: FluxProj.hh
Presets/: .fluxproj_cache  DefaultCube.farc  Light.farc  presets.proj.json
Src/: BuildEditor.cc  Editor3D.cc  main.cc  main.cpp
Src/3DView/: OrbitCamera.cc
Src/Components/: LightCom.cc  TransformCom.cc
Src/FluxProj/: Project.cc
Src/Importers/: AssimpImporter.cc
Src/Playground/: CMakeLists.txt  PerfPlayground.cc  PhysicsPlayground.cc  Playground.cc
shaders/: basic.frag  basic.vert  fragment.frag  vertex.vert
src/: main.cpp
